# reproducible-research-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _quarto.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/processed/: atvi_processed.csv
data/raw/: ATVI.csv
docs/: conf.py  index.rst
report/: analysis.qmd
src/: __init__.py  arma_model.py  config.py  data.py  diagnostics.py  evaluation.py  forecasting.py  garch_diagnostics.py  garch_models.py  garch_predict.py  models.py  pipeline.py  returns_analysis.py
tests/: test_data.py  test_evaluation.py  test_imports.py
