[project]
name = "reproducible-research-project"
version = "0.1.0"
description = "TBD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch>=8.0.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "myst-parser>=5.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
